--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_DATABASE=b55hyr1106xbqy6bxan6
-DB_USERNAME=upmrknckwdp71sgt
-DB_PASSWORD=lazbmSUbFijbPtHp6SEE
-DB_HOST=b55hyr1106xbqy6bxan6-mysql.services.clever-cloud.com
+DB_DATABASE=techblog_db
+DB_USERNAME=root
+DB_PASSWORD=Awongtwenty2024!
+DB_HOST=localhost
 DB_DIALECT=mysql
 DB_PORT=3306
