--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
     "sequelize": "^4.44.4"
+  },
+    "engines": {
+    "node": "14.x" 
   }
 }
