--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_DATABASE=techblog_db
-DB_USERNAME=root
-DB_PASSWORD=Awongtwenty2024!
-DB_HOST=localhost
+DB_DATABASE=bs66bshrnb5dhpbs41i7
+DB_USERNAME=uo833mec5hvtlnpn
+DB_PASSWORD=gh6grrFi7vAJdYb6W2S8
+DB_HOST=bs66bshrnb5dhpbs41i7-mysql.services.clever-cloud.com
 DB_DIALECT=mysql
 DB_PORT=3306
